Update Rec's Main

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -138,7 +138,8 @@
 
   <div class="side-buttons left-buttons">
     <button class="circle-btn" onclick="confirmJump('../index.html', '⚠️Are you on a computer?Please don’t use the desktop site on tablet or phone./你使用的是電腦嗎?請不要用平板或手機打開桌面版./パソコンをご利用ですか？デスクトップ版はタブレットやスマートフォンで開かないでください')">🖥</button>
-<button class="circle-btn" onclick="confirmJump('https://spiral.ooo')">⛏︎</button>
+<button class="circle-btn" onclick="confirmJump('https://x.com/recdnd', '[rec] Lead_Writer 𝕏 Main. Confirm jump?')">𝕏𝓡</button>
+<button class="circle-btn" onclick="confirmJump('mailto:r@rec.ooo', 'Compose mail to r@rec.ooo. Continue?')">✉️</button>
 <button class="circle-btn" onclick="confirmJump('https://sus.church')">☆</button>
   </div>
 
@@ -151,11 +152,17 @@
   </div>
 
   <div class="side-buttons right-buttons">
-<button class="circle-btn" onclick="confirmJump('https://x.com/recdnd', '[rec] Lead_Writer𝕏Main. Confirm Jump?')">𝕏𝓡</button>
-<button class="circle-btn" onclick="confirmJump('https://x.com/recdungeons', '🔞[軍田勇]二次創作𝕏アカウント18未満閲覧非推奨/Doujin 𝕏 Account(Not Recommended for Under 18)Confirm Jump?')">𝕏秘</button>
-<button class="circle-btn" onclick="confirmJump('https://spirallab.org')">🧪</button>
+  <button class="circle-btn"
+    onclick="confirmJump('https://pf.rec.ooo', 'Open profile (resume). Confirm jump?')">R</button>
 
-<button class="circle-btn" onclick="confirmJump('mailto:recdnd@proton.me')">✉️</button>
+  <button class="circle-btn"
+    onclick="confirmJump('https://git.rec.ooo', 'Open GitHub. Confirm jump?')">🐈‍⬛</button>
+
+  <button class="circle-btn"
+    onclick="confirmJump('https://spiral.ooo', 'Open spiral.ooo(In construction). Confirm jump?')">⛏︎</button>
+
+  <button class="circle-btn"
+    onclick="confirmJump('https://github.com/recdnd/spiral-core-series', 'Open spiral-core-series. Confirm jump?')">🌀*</button>
   </div>
 <canvas id="particleCanvas"></canvas>
   <script>
