Update Rec's Main

--- a/mobile/index.html
+++ b/mobile/index.html
@@ -138,7 +138,7 @@
 
   <div class="side-buttons left-buttons">
     <button class="circle-btn" onclick="confirmJump('../index.html', '⚠️Are you on a computer?Please don’t use the desktop site on tablet or phone./你使用的是電腦嗎?請不要用平板或手機打開桌面版./パソコンをご利用ですか？デスクトップ版はタブレットやスマートフォンで開かないでください')">🖥</button>
-<button class="circle-btn" onclick="confirmJump('https://x.com/recdnd', '[rec] Lead_Writer 𝕏 Main. Confirm jump?')">𝕏𝓡</button>
+<!--<button class="circle-btn" onclick="confirmJump('https://x.com/recdnd', '[rec] Lead_Writer 𝕏 Main. Confirm jump?')">𝕏𝓡</button>-->
 <button class="circle-btn" onclick="confirmJump('mailto:r@rec.ooo', 'Compose mail to r@rec.ooo. Continue?')">✉️</button>
 <button class="circle-btn" onclick="confirmJump('https://sus.church')">☆</button>
   </div>
