Update Rec's Main

--- a/index_副本.html
+++ b/index_副本.html
@@ -368,8 +368,7 @@ button.link-button:hover {
     <div class="link-list">
           <a class="link-button" href="https://pf.rec.ooo" target="_blank">profile</a>
       <a class="link-button" href="https://git.rec.ooo" target="_blank">git</a>
-      <a class="link-button" href="https://core.rec.ooo" target="_blank">core</a>
-      <a class="link-button" href="https://spiral.ooo" target="_blank">playground-β</a>
+      <a class="link-button" href="https://core.rec.ooo" target="_blank">spiral-core</a>
       <a href="javascript:void(0)" class="link-button" onclick="toggleEmailModal()">/mailbox</a>
       <a href="javascript:void(0)" class="link-button" onclick="toggleMiscModal()">/misc</a>
       <a href="javascript:void(0)" class="link-button" onclick="toggleAltModal()">/alt</a>
@@ -515,8 +514,9 @@ function generateCode() {
 				  </div>
 
 <div class="email-list">
-  <a href="https://spirallab.org" target="_blank"><code>lab</code></a>
-  <a href="https://spirallab.org/church" target="_blank"><code>church</code></a>
+  <a href="https://spiral.ooo" target="_blank" title="spiral playground"><code>spiral.ooo</code></a>
+  <a href="https://spirallab.org" target="_blank"><code>/lab</code></a>
+  <a href="https://spirallab.org/church" target="_blank"><code>/church</code></a>
 </div>
 				</div>
 
