--- a/mobile/index.html
+++ b/mobile/index.html
@@ -153,13 +153,13 @@
 
   <div class="side-buttons right-buttons">
   <button class="circle-btn"
-    onclick="confirmJump('https://pf.rec.ooo', 'Open profile (resume). Confirm jump?')">R</button>
+    onclick="confirmJump('https://pf.rec.ooo', 'Open my profile (resume). Confirm jump?')">R</button>
 
   <button class="circle-btn"
     onclick="confirmJump('https://git.rec.ooo', 'Open GitHub. Confirm jump?')">🐈‍⬛</button>
 
   <button class="circle-btn"
-    onclick="confirmJump('https://spiral.ooo', 'Open spiral.ooo(In construction). Confirm jump?')">⛏︎</button>
+    onclick="confirmJump('https://spiral.ooo', 'Open spiral.ooo playground-β (In construction). Confirm jump?')">⛏︎</button>
 
   <button class="circle-btn"
     onclick="confirmJump('https://github.com/recdnd/spiral-core-series', 'Open spiral-core-series. Confirm jump?')">🌀*</button>
