Update Rec's Main

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ function generateCode() {
 <div class="email-list">
   <a href="https://x.com/recdungeons" target="_blank"><code>.𝕏[軍田勇]</code></a>
   <a href="https://archiveofourown.org/users/recdnd" target="_blank"><code>ao3</code></a>
-  <a href="https://discord.gg/XsTmRs9RrG" target="_blank"><code>/cord</code></a>
+  <a href="https://discord.gg/XsTmRs9RrG" target="_blank"><code>cord</code></a>
 </div>
 				</div>
 
