Add SEO optimization: JSON-LD schema and meta tags

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Rec Dungeons</title>
+  <title>rec.ooo - Xue Juntao (Rec)</title>
+  <meta name="description" content="Personal website of Xue Juntao (Rec) - Developer, Creator">
+  <meta name="keywords" content="Xue Juntao, Rec, rec.ooo, developer, creator">
+  <meta name="author" content="Xue Juntao">
+  <link rel="canonical" href="https://rec.ooo/">
   <link rel="icon" type="image/png" href="redrec32.png">
 <script>
   (function() {
@@ -344,6 +348,41 @@ button.link-button:hover {
 
 
   </style>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Person",
+      "@id": "https://rec.ooo/#person",
+      "name": "Xue Juntao",
+      "alternateName": ["Rec"],
+      "url": "https://rec.ooo/",
+      "email": "mailto:r@rec.ooo",
+      "sameAs": [
+        "https://github.com/recdnd",
+        "https://git.rec.ooo",
+        "https://www.linkedin.com/in/juntaoxue/"
+      ]
+    },
+    {
+      "@type": "WebSite",
+      "@id": "https://rec.ooo/#website",
+      "url": "https://rec.ooo/",
+      "name": "rec.ooo",
+      "publisher": { "@id": "https://rec.ooo/#person" }
+    },
+    {
+      "@type": "WebPage",
+      "@id": "https://rec.ooo/#webpage",
+      "url": "https://rec.ooo/",
+      "name": "rec.ooo",
+      "isPartOf": { "@id": "https://rec.ooo/#website" },
+      "about": { "@id": "https://rec.ooo/#person" }
+    }
+  ]
+}
+</script>
 </head>
 <body>
 	<div id="introCover"></div>
