Update Rec's Main

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ button.link-button:hover {
       "@type": "Person",
       "@id": "https://rec.ooo/#person",
       "name": "Xue Juntao",
-      "alternateName": ["Rec"],
+      "alternateName": ["Rec", "Rec Dungeons", "recdnd"],
       "url": "https://rec.ooo/",
       "email": "mailto:r@rec.ooo",
       "sameAs": [
