Update Rec's Main

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>rec.ooo - Xue Juntao (Rec)</title>
-  <meta name="description" content="Personal website of Xue Juntao (Rec) - Developer, Creator">
-  <meta name="keywords" content="Xue Juntao, Rec, rec.ooo, developer, creator">
-  <meta name="author" content="Xue Juntao">
+  <title>Rec Dungeons</title>
+  <meta name="description" content="Lead Writer's Main.">
+  <meta name="keywords" content="Xue Juntao, Rec, rec.ooo, developer, full-stack engineer, Spial.ooo, Maeley Entacle">
+  <meta name="author" content="Rec Dungeons">
   <link rel="canonical" href="https://rec.ooo/">
   <link rel="icon" type="image/png" href="redrec32.png">
 <script>
